--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     width: 100%;
     position: fixed;
     text-align:center;
-    top:-50px;
+    top:-55px;
     height:100px;
     z-index:999;
 
@@ -46,6 +46,9 @@ html{
 background-color: var(--main);
 }
 
+html{
+    scroll-behavior: smooth;
+}
 .container{
     
 }
@@ -62,41 +65,62 @@ body{
 .nav-bar{
     padding-top:20px;
 }
+
 .navbar{
-background:var(--sub))
+background:var(--sub);
+top:65px;
 }
+
 .nav-buttons{
     background-color: var(--page-buttons);
 }
+
 button{
     padding:10px;
 
 }
+
 .row{
 float:right;
 
 }
+
 .mainpage{
     margin-top:-10px;
     
 }
+
 .navbar{
     float:right;
 }
+
 .navbar-toggler{
     position:fixed;
-    right:3px;
-    top:5px;
+    right:20px;
+    top:20px;
+}
+
+.navbar-toggler-icon{
+    position:relative;
+
 
 }
+.navbar-collapse{
+    right:90px;
+}
+
 .btn{
     color:var(--text);
 }
 .nav-item{
     background:var(--sub);
+    margin-top:20px;
+    top:20px;
 
 }
-
+#mainNav{
+    z-index: 1;
+}
 
 hr{
     background-color: var(--sub);
@@ -142,12 +166,15 @@ img{
     img{
         width:400px;
     }
+    .navbar-nav{
+        font-size: 15px;;
+    }
 }
 
 @media(max-width:456px){
     .btn{
         font-size: 20px;
-        padding-top:
+
     }
     
 }
@@ -174,10 +201,10 @@ img{
            font-size:10px;
        }
        .header2{
-        height:130px;
+        height:50px;
        }
        .mainpage{
-           margin-top:120px;
+           margin-top:-55px;
        }
     }
 
