--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --sub:#df8f27;
     --page-buttons:#333;
     --text:#fff;
+    --button-in:#cf8525;;
 
 }
 
@@ -25,6 +26,10 @@ h2{
     padding:10px 0px 10px 0px;
     margin: 100px 0px 1px 0px;
     text-shadow: 2px 2px var(--secondary);
+}
+h3{
+    color: var(--sub);
+    text-shadow: 0px 3px var(--page-buttons);
 }
 .specialhr{
 margin-bottom:-15px;
@@ -70,7 +75,8 @@ body{
 }
 
 .navbar{
-top:65px;
+top:33px;
+float:right;
 
 }
 
@@ -92,25 +98,32 @@ float:right;
     margin-top:-10px;
     
 }
-
-.navbar{
-    float:right;
-    top:2px;
+.mainpage p{
+    margin:0px 10px 0px 10px;
 }
 
 .navbar-toggler{
     position:fixed;
-    right:20px;
-    top:20px;
+    right: 10px;
+    top:2px;
+    background-color: var(--sub);
+    border: 1px solid white
 }
 
 .navbar-toggler-icon{
-    position:relative;
+    
 
 
 }
+.fas{
+    align-self: center;
+}
 .navbar-collapse{
-    right:90px;
+    right:0px;
+}
+
+.show{
+right:2000px;
 }
 
 .btn{
@@ -119,11 +132,15 @@ float:right;
 .nav-item{
     background:linear-gradient(180deg,var(--main),var(--sub));
     margin-top:20px;
-    top:20px;
-
+    top:40px;
+    right:20px;
+}
+a:hover{
+    color:var(--page-buttons) !important;
+    background: linear-gradient(-180deg,var(--main),var(--button-in)) !important;
 }
 #mainNav{
-    z-index: 1;
+    z-index: 9;
 }
 
 hr{
@@ -132,14 +149,30 @@ hr{
 ul{
     position: relative;
     list-style-type: none;
-    
+    left:-20px;
 }
-ul img{
+ul li img{
     border: 10px solid var(--main);
     margin:10px;
+    width:30%;
     
 }
+.skill{
+    font-size:90px;
+    display: inline;
+    float:left;
+}
+.skill-text{
+    font-size: 20px;;
+}
+.skill-list{
+    text-shadow: 2px 3px var(--page-buttons);
+    margin-bottom:100px;
+}
 
+.subhr{
+    width:30%
+}
 /* media stuff */
 @media(max-width:1280px){
  body{
@@ -167,14 +200,35 @@ img{
 }
 
 @media(max-width:991px){
+    .nav-buttons{
+        font-size:10px;
+    }   
 
 }
 
+@media(max-width:797px){
+    img{
+        width:500px;
+    }
+    .navbar-nav{
+        font-size: 15px;;
+    }   
+           .nav-buttons{
+           font-size:5px;
+       }
+ 
+}
 @media(max-width:768px){
     img{
         width:500px;
     }
-     
+    .navbar-nav{
+        font-size: 12px;;
+    }   
+           .nav-buttons{
+           font-size:5px;
+       }
+ 
 }
 
 @media(max-width:665px){
@@ -182,8 +236,17 @@ img{
         width:400px;
     }
     .navbar-nav{
-        font-size: 15px;;
+        font-size: 10px;;
     }
+}
+@media(max-width:575px){
+    .navbar{
+        float:right;
+        top:50px;
+        background:linear-gradient(180deg,var(--main),var(--sub));
+        
+    }
+
 }
 
 @media(max-width:456px){
@@ -198,23 +261,23 @@ img{
     img{
         width:250px;
     }
-    
+    .skill{
+        font-size:20px;
+        display: inline;
+        float:left;
+    }
 }
 @media(max-width:300px){
     img{
         width:150px;
     }
-    .nav-buttons{
-        font-size:15px;
-    }
+
 
 @media(max-width:285px){
        .display-1{
            left:0px;
        }
-       .nav-buttons{
-           font-size:10px;
-       }
+
        .header2{
         height:50px;
        }
